--- a/03/Lesson03/Base.lproj/Main.storyboard
+++ b/03/Lesson03/Base.lproj/Main.storyboard
@@ -32,8 +32,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMl-Di-GNm">
-                                <rect key="frame" x="154" y="187" width="294" height="154"/>
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMl-Di-GNm">
+                                <rect key="frame" x="153" y="187" width="294" height="154"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="293.5" id="pEs-UT-NKI"/>
@@ -55,6 +55,9 @@ It needs to have an image view and a dismiss button that dismisses the modal. Do
                                 <state key="normal" title="Display Table View">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="displayTableView:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="KJW-1u-UDQ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -67,12 +70,55 @@ It needs to have an image view and a dismiss button that dismisses the modal. Do
                     </view>
                     <navigationItem key="navigationItem" id="hzY-Hy-RMA"/>
                     <connections>
+                        <outlet property="todoLabel" destination="NMl-Di-GNm" id="nsI-br-6Rc"/>
                         <segue destination="tH5-nV-9zA" kind="show" identifier="show" id="O1F-Kb-DN0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="282.75" y="407"/>
+        </scene>
+        <!--ModalView-->
+        <scene sceneID="9Pb-6C-Lra">
+            <objects>
+                <viewController storyboardIdentifier="modalIdVC" title="ModalView" id="w98-2P-KHC" customClass="ModalView" customModule="Lesson03" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I9F-X3-DNi"/>
+                        <viewControllerLayoutGuide type="bottom" id="tBG-aI-ICk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iej-ez-0Sv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wtp-Ju-fHW">
+                                <rect key="frame" x="273" y="275" width="54" height="30"/>
+                                <state key="normal" title="Dismiss">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="dismissButton:" destination="w98-2P-KHC" eventType="touchUpInside" id="VfU-aZ-XyM"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="03.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="HCL-ND-u7X">
+                                <rect key="frame" x="150" y="80" width="300" height="155"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="155" id="9SD-8S-4qH"/>
+                                    <constraint firstAttribute="width" constant="300" id="QzF-uP-j2V"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="HCL-ND-u7X" firstAttribute="top" secondItem="I9F-X3-DNi" secondAttribute="bottom" constant="60" id="5nj-Na-Qfj"/>
+                            <constraint firstAttribute="centerX" secondItem="HCL-ND-u7X" secondAttribute="centerX" id="IuK-JD-GYU"/>
+                            <constraint firstItem="wtp-Ju-fHW" firstAttribute="top" secondItem="HCL-ND-u7X" secondAttribute="bottom" constant="40" id="YBO-o5-kBe"/>
+                            <constraint firstItem="wtp-Ju-fHW" firstAttribute="centerX" secondItem="iej-ez-0Sv" secondAttribute="centerX" id="wnN-Oh-g4b"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="esx-GF-JBP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="282" y="1080"/>
         </scene>
         <!--Array Table View Controller-->
         <scene sceneID="hS5-QX-ITe">
@@ -93,4 +139,7 @@ It needs to have an image view and a dismiss button that dismisses the modal. Do
             <point key="canvasLocation" x="969" y="407"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="03.jpg" width="600" height="440"/>
+    </resources>
 </document>
